--- a/client/src/components/layout/Header.css
+++ b/client/src/components/layout/Header.css
@@ -68,7 +68,10 @@
 #header .logo {
   padding: 20px;
 }
-
+.settableright {
+  align-items: center;
+  justify-content: center;
+}
 @media only screen and (max-width: 720px) {
   html {
     overflow: hidden;
