added column 4 in table

--- a/client/src/components/dashboard/Dash.css
+++ b/client/src/components/dashboard/Dash.css
@@ -1,7 +1,10 @@
 th,
 td {
   padding: 1rem;
-  text-align: center;
+  text-align: left;
+}
+th {
+  text-decoration: underline;
 }
 .pagination {
   display: flex;
